--- a/Link/index.html
+++ b/Link/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Link</title>
   </head>
-  <body class="bg-[#222831] text-white w-full h-full">
+  <body class="dark:bg-[#222831] dark:text-white bg-amber-50 text-black w-full h-full">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
